// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FamilyBadge case horizontal: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <glamorous(div)
    width={490}
  >
    <glamorous(img)
      alt="alt1"
      height={235}
      src="image"
      width={490}
    />
    <glamorous(div)>
      <glamorous(div)>
        family
      </glamorous(div)>
    </glamorous(div)>
  </glamorous(div)>
</Link>
`;

exports[`FamilyBadge case square-big: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <glamorous(div)
    width={490}
  >
    <glamorous(img)
      alt="alt1"
      height={561}
      src="image"
      width={490}
    />
    <glamorous(div)>
      <glamorous(div)>
        family
      </glamorous(div)>
    </glamorous(div)>
  </glamorous(div)>
</Link>
`;

exports[`FamilyBadge case square-small: should render with the right height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <glamorous(div)
    width={235}
  >
    <glamorous(img)
      alt="alt1"
      height={235}
      src="image"
      width={235}
    />
    <glamorous(div)>
      <glamorous(div)>
        family
      </glamorous(div)>
    </glamorous(div)>
  </glamorous(div)>
</Link>
`;

exports[`FamilyBadge case wrong prop: should render with default height and width 1`] = `
<Link
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/catalogue/123"
>
  <glamorous(div)
    width={490}
  >
    <glamorous(img)
      alt="alt1"
      height={235}
      src="image"
      width={490}
    />
    <glamorous(div)>
      <glamorous(div)>
        family
      </glamorous(div)>
    </glamorous(div)>
  </glamorous(div)>
</Link>
`;
